# qwen2.5-vl-7b-playwright-desktop-lora

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.sh
config/: mock_scenarios.json  model.yaml  sandbox.yaml
scripts/: run_agent.py  run_harness.py  train_lora.py
src/agent/: graph.py  nodes.py  prompts.py  state.py
src/harness/: metrics.py  runner.py  scenarios.py
src/memory/: context.py  history.py
src/sandbox/: actions.py  browser.py  recorder.py
src/training/: dataset.py  lora.py
src/vision/: mock.py  model.py  processor.py  quant.py
tests/: test_agent.py  test_harness.py  test_memory.py  test_vision.py
