[project]
name = "multimodal-agent"
version = "0.1.0"
description = "Multimodal Vision-Agent & Deterministic Sandbox Harness"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=4.44",
    "accelerate>=0.33",
    "bitsandbytes>=0.43",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "playwright>=1.47",
    "pytest-asyncio>=0.24",
    "peft>=0.12",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "pillow>=10.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
